Fix possible overlap in Speed Dial.
Text size may increases due to localization and this
may cause overlap of label and button in Speed Dial.
Layout fixed to handle it gracefilly, ellipsizing label
if needed. String resources representing fonts marked as
non-translatable for aapt.

Change-Id: I81423c70ff54837c101888300c8b2d5aae7b7dd0

--- a/res/layout/phone_favorites_menu.xml
+++ b/res/layout/phone_favorites_menu.xml
@@ -36,10 +36,13 @@
             android:textColor="@color/speed_dial_text_color"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:gravity="center"
+            android:layout_toLeftOf="@+id/all_contacts_button"
+            android:gravity="left"
+            android:ellipsize="end"
+            android:singleLine="true"
         />
     <Button
-            android:id="@+id/all_contacts_button"
+            android:id="@id/all_contacts_button"
             android:fontFamily="@string/favorites_menu_all_contacts_font_family"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/favorites_menu_all_contacts_height"
